release/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o release
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o release
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: worker
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - env:
        - name: BACKEND_URL
          value: http://backend:8080
        image: registry.gitlab.com/frixxie1/rss-centr:worker-0.2.1
        imagePullPolicy: IfNotPresent
        name: worker
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsUser: 10001
          runAsGroup: 10001
      restartPolicy: Always
