release/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o release
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    io.kompose.service: backend
