release/frontend-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-loadbalancer
  labels:
    io.kompose.service: frontend
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    io.kompose.service: frontend
