release/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o release
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: worker
  name: worker
spec:
  ports:
  - name: metrics
    port: 9090
    targetPort: metrics
  selector:
    io.kompose.service: worker
